# VideoSentimentAnalysis

./: README.md  pyproject.toml  videoSentimentAnalysis.py  video_urls.txt
videosentimentanalysis/: videoSentimentAnalysis.py
videosentimentanalysis/adapters/extract_audio/: moviepy_extraction.py
videosentimentanalysis/adapters/extract_emotions/: text2emotion_extractor.py
videosentimentanalysis/adapters/logging/: custom_logger.py  loguru_logger.py
videosentimentanalysis/adapters/perform_sentiment_analysis/: textblob_analysis.py
videosentimentanalysis/adapters/transcribe_audio/: speechrecognition.py
videosentimentanalysis/adapters/translate_text/: google_translate.py
videosentimentanalysis/domain/: audio.py  raw_video_url.py  video.py
videosentimentanalysis/services/: CineSense.ipynb  download_log.txt  video_urls.txt
videosentimentanalysis/usecases/: download_video_use_case.py  video_utility_use_case.py
videosentimentanalysis/usecases/protocols/: extract_audio.py  extract_emotions.py  extract_polarity_and_sensitivity.py  extract_text.py  logging.py  translate_text.py
