[tool.poetry]
name = "videosentimentanalysis"
version = "0.1.0"
description = "Extracts sentiment from youtube videos"
authors = ["Daria Vesela <daria1vesela@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytube = "^15.0.0"
textblob = "^0.18.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
