[tool.poetry]
name = "videosentimentanalysis"
version = "0.1.0"
description = "Extracts sentiment from youtube videos"
authors = ["Daria Vesela <daria1vesela@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
textblob = "^0.18.0.post0"
pydantic = "^2.7.4"
jupyter = "^1.0.0"
loguru = "^0.7.2"
pytube = "^15.0.0"
moviepy = "^1.0.3"
speechrecognition = "^3.10.4"
numpy = "^1.21.2"
soundfile = "^0.12.1"
torch = "^2.3.1"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
deep-translator = "^1.11.4"
text2emotion = "^0.0.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
